# plugify-menu-system

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  menu.pplugin.in  menusystem.json  s2menu.json  s2menu.pplugin.in
.github/workflows/: build-linux.yml  build-windows.yml  cmake-multiple-platform.yml
cmake/: dynlibutils.cmake  fmt.cmake  logger.cmake  plugify.cmake  sourcesdk.cmake
cmake/menusystem/: generate_exports.cmake  generate_pplugin.cmake
cmake/platform/: shared.cmake
include/: imenubinding.hpp  menusystem_plugin.hpp  plugin.hpp
include/plugify/: cpp_plugin.hpp
src/: menusystem_plugin.cpp  plugin.cpp
src/export/: menu.cpp
sym/: exported_symbols.lds  version_script.lds
